# aks_infra

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  azuredeploy.json  azuredeploy.parameters.json  metadata.json  state.json
.github/workflows/: ci.yml  deploy.yml  lint.yml  terraform-plan.yml
arm/: azuredeploy.json  metadata.json
k8s/: aks-store-demo.yaml  datadog-agent.yaml  datadog-values.yaml  deploy-sample-app.sh  deploy.py  deploy_sample_app.py  helm_dd_install.py  helm_dd_install.sh  helm_repo_init.py  helm_repo_init.sh  pyproject.toml  requirements.txt
k8s/workload-identity/: kustomization.yaml  namespace.yaml  service-account.yaml  test-pod-python.yaml  test-pod.yaml
kind/: kind-config.yaml  kustomization.yaml  setup.py  setup.sh  store-demo.yaml  store-front-nodeport.yaml  teardown.sh
mayor/rig/: README.md
mayor/rig/arm/: azuredeploy.json
mayor/rig/k8s/: deploy-sample-app.sh
mayor/rig/terraform/: main.tf  outputs.tf  variables.tf  versions.tf
scripts/: test-workload-identity.sh
terraform/: .gitignore  .main.tf.swp  .terraform.lock.hcl  azure_ad.tf  destroy.sh  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
