[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aks-deploy"
version = "1.0.0"
description = "AKS deployment CLI with Datadog instrumentation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["aks", "kubernetes", "deployment", "datadog", "helm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
datadog = [
    "ddtrace>=2.0",
    "datadog>=0.49",
]
dev = [
    "ddtrace>=2.0",
    "datadog>=0.49",
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[project.scripts]
aks-deploy = "deploy:main"

[tool.setuptools]
py-modules = ["deploy"]
